# tech-db-homework

./: .gitignore  .gitmodules  Cargo.toml  Jenkinsfile  LICENSE  README.md  build.rs  main.go
assets/db/migrations/: 0000-base.sql
data/www/doc/: index.html  swagger.yml
src/: endpoints.rs  main.rs
